# AOC2020

./: .gitignore  README.md
src/: CMakeLists.txt  message_validator.cpp
src/aoc2015/: day1.cpp
src/include/aoc/: message_validator.h
src/include/aoc2015/: day1.h
src/include/util/: flag.hpp
src/intro/: CMakeLists.txt
test/: CMakeLists.txt  aoc_2020_19_1_tests.cpp  enum_flag.cpp  test_constants.h
test/aoc2015/: day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp
test/aoc2020/: y2020d20.cpp
test/sample/: constexpr_tests.cpp  tests.cpp
